fix of grid-gap spacing when over 1900px but less than 2200px

--- a/react-app/src/components/LovedFeed/lovedFeed.css
+++ b/react-app/src/components/LovedFeed/lovedFeed.css
@@ -14,7 +14,7 @@ min-width: 1350px;
   justify-content: space-between;
   
   grid-template-columns: repeat(3, minmax(300px, 300px));
-  /* grid-gap: 100px; */
+  grid-gap: 100px;
   margin: 0 12% 0 12%;
   padding: 150px 100px 300px 125px;
 }
@@ -22,14 +22,8 @@ min-width: 1350px;
 @media only screen and (max-width: 1900px)  {
 
   .loved_feed_container {
-    grid-gap: 50px;
-  }
-}
-
-@media only screen and (max-width: 1900px)  {
-  
-  .loved_feed_container {
     grid-template-columns: repeat(2, minmax(300px, 300px));
+    grid-gap: 50px;
   }
 }
 
